--- a/css/login.css
+++ b/css/login.css
@@ -11,7 +11,7 @@ body {
   overflow-x: hidden; */
 }
 .fondo {
-  background-image: url(../images/background.png);
+  background-image: url(../src/background.png);
   background-size: fixed;
   background-repeat: no-repeat;
 }
