--- a/css/login.css
+++ b/css/login.css
@@ -127,6 +127,7 @@ body {
   background-color: #5a407a;
   color: white;
   font-size: 18px;
+  cursor: pointer;
 }
 .btn-position {
   position: relative;
