--- a/css/custom.css
+++ b/css/custom.css
@@ -8,6 +8,7 @@
   border-bottom-width: 7px;
   border-bottom-style: solid;
   border-image: linear-gradient(to right, #82CA6F, #75C8F2, #9071AF, #B65CA0, #F8BE63) 1;
+  filter: blur(1px);
 }
 :root {
   --bs-blue: #0d6efd;
