--- a/css/home.css
+++ b/css/home.css
@@ -151,3 +151,55 @@ color: #9B46BB;
     height: 290px;
     object-fit: cover;
 }
+
+.carousel-item{
+    height:28rem;
+    color: white;
+    position:relative;
+}
+.carousel-item{position:relative;
+    display:none;
+    float:center;
+    width:100%;
+    margin-right:-100%;
+    -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
+    transition:transform .6s ease-in-out}
+
+.carousel-conteiner{
+    position: center;
+    bottom:0;
+    left:0;
+    right:0;
+    padding: bottom 50px;
+    background-image: url(/Images/dolar.1.jpg);
+    align-items: center;
+}
+
+    .carousel-capt{position:absolute;
+        right: 10px;
+        left:15px;
+        padding-top:1rem;
+        padding-bottom:1rem;
+        padding-left: 20px;
+        padding-right:20px;
+        color:black;
+        text-align:center;
+    }
+
+        .carousel-photo{
+            display:flex;
+            width: 40%;
+            height: 40%;
+            border-radius:20%;
+            text-align: left;
+            margin: 0 auto;
+            object-fit: cover
+        
+        }
+
+    .carousel-int{position:sticky;
+        width:100%;
+        height:7cm;
+        background-color: rgb(216, 210, 210);
+        overflow:hidden}
